# yandex-weather-proxy

./: Cargo.toml  LICENSE.txt  README.md
debian/: changelog  control  default  dirs  install  rules  service
src/: data.rs  error.rs  icon.rs  main.rs  util.rs
