[package]
name = "yandex-weather-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
hyper = { version = "0.14", features = ["http1", "client", "server", "runtime", "tcp", "stream"] }
hyper-rustls = "0.23.0"
pathsearch = "0.2.0"
is_executable = "1.0.1"
thiserror = "1.0"
chrono = "0.4"
filetime = "0.2.16"
file-mode = "0.1.2"
tempfile = "3.3.0"
clap = { version = "3.1", features = ["derive", "env"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.16"
env_logger = "0.9.0"
